--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "php": ">=5.3",     
-        "lusitanian/oauth": "~0.3"
+        "lusitanian/oauth": "1.0.x-dev"
     },
     "require-dev": {
         "illuminate/support": "~4"
